@@ -1,0 +1,10 @@
+[package]
+name = "raspi3_boot"
+version = "0.1.0"
+authors = ["Andre Richter <andre.o.richter@gmail.com>"]
+edition = "2018"
+publish = false
+
+[dependencies]
+cortex-a = "2.3.1"
+r0 = "0.2.2"
